EPOS/Microsoft Visual Basic/Example VB 2010 64-Bit/Definitions.vb


'Profile Velocity Mode
Declare Function VCS_ActivateProfileVelocityMode Lib "EposCmd64.dll" Alias "VCS_ActivateProfileVelocityMode" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetVelocityProfile Lib "EposCmd64.dll" Alias "VCS_SetVelocityProfile" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal ProfileAcceleration As UInteger, ByVal ProfileDeceleration As UInteger, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetVelocityProfile Lib "EposCmd64.dll" Alias "VCS_GetVelocityProfile" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pProfileAcceleration As UInteger, ByRef pProfileDeceleration As UInteger, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_MoveWithVelocity Lib "EposCmd64.dll" Alias "VCS_MoveWithVelocity" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal TargetVelocity As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetTargetVelocity Lib "EposCmd64.dll" Alias "VCS_GetTargetVelocity" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pTargetVelocity As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_HaltVelocityMovement Lib "EposCmd64.dll" Alias "VCS_HaltVelocityMovement" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer

'Advanced Functions
Declare Function VCS_EnableVelocityWindow Lib "EposCmd64.dll" Alias "VCS_EnableVelocityWindow" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal VelocityWindow As UInteger, ByVal VelocityWindowTime As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_DisableVelocityWindow Lib "EposCmd64.dll" Alias "VCS_DisableVelocityWindow" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer

'Homing Mode
Declare Function VCS_ActivateHomingMode Lib "EposCmd64.dll" Alias "VCS_ActivateHomingMode" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetHomingParameter Lib "EposCmd64.dll" Alias "VCS_SetHomingParameter" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal HomingAcceleration As UInteger, ByVal SpeedSwitch As UInteger, ByVal SpeedIndex As UInteger, ByVal HomeOffset As Integer, ByVal CurrentThreshold As UShort, ByVal HomePosition As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetHomingParameter Lib "EposCmd64.dll" Alias "VCS_GetHomingParameter" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pHomingAcceleration As UInteger, ByRef pSpeedSwitch As UInteger, ByRef pSpeedIndex As UInteger, ByRef pHomeOffset As Integer, ByRef pCurrentThreshold As UShort, ByRef pHomePosition As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_FindHome Lib "EposCmd64.dll" Alias "VCS_FindHome" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal HomingMode As SByte, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_StopHoming Lib "EposCmd64.dll" Alias "VCS_StopHoming" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_DefinePosition Lib "EposCmd64.dll" Alias "VCS_DefinePosition" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal HomePosition As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_WaitForHomingAttained Lib "EposCmd64.dll" Alias "VCS_WaitForHomingAttained" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal Timeout As UInteger, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetHomingState Lib "EposCmd64.dll" Alias "VCS_GetHomingState" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pHomingAttained As Integer, ByRef pHomingError As Integer, ByRef pErrorCode As UInteger) As Integer

'Interpolated Position Mode
Declare Function VCS_ActivateInterpolatedPositionMode Lib "EposCmd64.dll" Alias "VCS_ActivateInterpolatedPositionMode" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetIpmBufferParameter Lib "EposCmd64.dll" Alias "VCS_SetIpmBufferParameter" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal UnderflowWarningLimit As UShort, ByVal OverflowWarningLimit As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetIpmBufferParameter Lib "EposCmd64.dll" Alias "VCS_GetIpmBufferParameter" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pUnderflowWarningLimit As UShort, ByRef pOverflowWarningLimit As UShort, ByRef pMaxBufferSize As UInteger, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_ClearIpmBuffer Lib "EposCmd64.dll" Alias "VCS_ClearIpmBuffer" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetFreeIpmBufferSize Lib "EposCmd64.dll" Alias "VCS_GetFreeIpmBufferSize" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pBufferSize As UInteger, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_AddPvtValueToIpmBuffer Lib "EposCmd64.dll" Alias "VCS_AddPvtValueToIpmBuffer" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal Position As Integer, ByVal Velocity As Integer, ByVal Time As Byte, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_StartIpmTrajectory Lib "EposCmd64.dll" Alias "VCS_StartIpmTrajectory" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_StopIpmTrajectory Lib "EposCmd64.dll" Alias "VCS_StartIpmTrajectory" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetIpmStatus Lib "EposCmd64.dll" Alias "VCS_GetIpmStatus" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pTrajectoryRunning As Integer, ByRef pIsUnderflowWarning As Integer, ByRef pIsOverflowWarning As Integer, ByRef pIsVelocityWarning As Integer, ByRef pIsAccelerationWarning As Integer, ByRef pIsUnderflowError As Integer, ByRef pIsOverflowError As Integer, ByRef pIsVelocityError As Integer, ByRef pIsAccelerationError As Integer, ByRef pErrorCode As UInteger) As Integer

'Position Mode
Declare Function VCS_ActivatePositionMode Lib "EposCmd64.dll" Alias "VCS_ActivatePositionMode" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetPositionMust Lib "EposCmd64.dll" Alias "VCS_SetPositionMust" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal PositionMust As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetPositionMust Lib "EposCmd64.dll" Alias "VCS_GetPositionMust" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pPositionMust As Integer, ByRef pErrorCode As UInteger) As Integer

'Advanced Functions
Declare Function VCS_ActivateAnalogPositionSetpoint Lib "EposCmd64.dll" Alias "VCS_ActivateAnalogPositionSetpoint" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal AnalogInputNumber As UShort, ByVal Scaling As Single, ByVal Offset As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_DeactivateAnalogPositionSetpoint Lib "EposCmd64.dll" Alias "VCS_DeactivateAnalogPositionSetpoint" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal AnalogInputNumber As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_EnableAnalogPositionSetpoint Lib "EposCmd64.dll" Alias "VCS_EnableAnalogPositionSetpoint" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_DisableAnalogPositionSetpoint Lib "EposCmd64.dll" Alias "VCS_DisableAnalogPositionSetpoint" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer

'Velocity Mode
Declare Function VCS_ActivateVelocityMode Lib "EposCmd64.dll" Alias "VCS_ActivateVelocityMode" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetVelocityMust Lib "EposCmd64.dll" Alias "VCS_SetVelocityMust" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal VelocityMust As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetVelocityMust Lib "EposCmd64.dll" Alias "VCS_GetVelocityMust" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pVelocityMust As Integer, ByRef pErrorCode As UInteger) As Integer

'Advanced Functions
Declare Function VCS_ActivateAnalogVelocitySetpoint Lib "EposCmd64.dll" Alias "VCS_ActivateAnalogVelocitySetpoint" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal AnalogInputNumber As UShort, ByVal Scaling As Single, ByVal Offset As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_DeactivateAnalogVelocitySetpoint Lib "EposCmd64.dll" Alias "VCS_DeactivateAnalogVelocitySetpoint" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal AnalogInputNumber As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_EnableAnalogVelocitySetpoint Lib "EposCmd64.dll" Alias "VCS_EnableAnalogVelocitySetpoint" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_DisableAnalogVelocitySetpoint Lib "EposCmd64.dll" Alias "VCS_DisableAnalogVelocitySetpoint" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer

'Current Mode
Declare Function VCS_ActivateCurrentMode Lib "EposCmd64.dll" Alias "VCS_ActivateCurrentMode" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetCurrentMust Lib "EposCmd64.dll" Alias "VCS_SetCurrentMust" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal CurrentMust As Short, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetCurrentMustEx Lib "EposCmd64.dll" Alias "VCS_SetCurrentMustEx" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal CurrentMust As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetCurrentMust Lib "EposCmd64.dll" Alias "VCS_GetCurrentMust" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pCurrentMust As Short, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetCurrentMustEx Lib "EposCmd64.dll" Alias "VCS_GetCurrentMustEx" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pCurrentMust As Integer, ByRef pErrorCode As UInteger) As Integer

'Advanced Functions
Declare Function VCS_ActivateAnalogCurrentSetpoint Lib "EposCmd64.dll" Alias "VCS_ActivateAnalogCurrentSetpoint" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal AnalogInputNumber As UShort, ByVal Scaling As Single, ByVal Offset As Short, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_DeactivateAnalogCurrentSetpoint Lib "EposCmd64.dll" Alias "VCS_DeactivateAnalogCurrentSetpoint" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal AnalogInputNumber As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_EnableAnalogCurrentSetpoint Lib "EposCmd64.dll" Alias "VCS_EnableAnalogCurrentSetpoint" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_DisableAnalogCurrentSetpoint Lib "EposCmd64.dll" Alias "VCS_DisableAnalogCurrentSetpoint" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer
